Bug 170803 - Inserting a hyperlink crashes LibreOffice when system's clipboard is empty
Summary: Inserting a hyperlink crashes LibreOffice when system's clipboard is empty
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:25.8.7 target:26...
Keywords: bibisected, bisected, implementationError
Depends on:
Blocks:
 
Reported: 2026-02-15 00:05 UTC by Adam
Modified: 2026-03-24 04:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adam 2026-02-15 00:05:03 UTC
Description:
LibreOffice 26.2.0.3 (Writer, Calc, Impress or Draw) always crashes when trying to insert a hyperlink with an empty clipboard.

Steps to Reproduce:
1. Clear Windows' clipboard (run 'echo off | clip' from the command line).
2. Select the Hyperlink command from the Insert menu in Writer/Calc/Impress/Draw.

Actual Results:
LibreOffice crashes.

Expected Results:
LibreOffice should not crash.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
One of the crash reports: https://crashreport.libreoffice.org/stats/crash_details/a28d6256-bbd9-4f42-b58a-332c4c903135
Comment 1 Noah deFer 2026-03-09 13:47:30 UTC
Hello Adam, 

Thank you for reporting the bug. I can confirm that the bug is in the current stable and master builds:
Version: 26.2.1.2 (X86_64)
Build ID: 620(Build:2)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: bb24b8ec8f8a3bef6efece607479fff9541e30ff
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 2 Buovjaga 2026-03-11 18:07:49 UTC
I remembered a feature and checked with the Windows 24.2 bibisect repo that the cause is indeed bug 146576. `echo off | clip` in Command Prompt was used when reproducing.

It seems more guards are needed...
Comment 3 Commit Notification 2026-03-20 05:21:45 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6ac395530d06437133e7a989f3143ba29311d8fc

tdf#170803 Insert a hyperlink crashes when system clipboard empty

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-03-23 14:21:35 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/4529d89156cd8340910653fa248bf9d11655f1f3

tdf#170803 Insert a hyperlink crashes when system clipboard empty

It will be available in 25.8.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2026-03-24 04:33:10 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/f0e73f61e347ee148fbc6791b9eeff35a6538e66

tdf#170803 Insert a hyperlink crashes when system clipboard empty

It will be available in 26.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.