tdf#170803 Insert a hyperlink crashes when system clipboard empty

I can see no reason why we should throw an exception here.

Change-Id: Ia98dc97c4fd25c4ca9102ef02be5851c0a4f7dd5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/202204
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit 6ac395530d06437133e7a989f3143ba29311d8fc)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/202449
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>